fix bug in reassemble nodes